--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-parcelize'
-    id 'androidx.navigation.safeargs'
     id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs'
+//    id "com.google.dagger.hilt.android"
 }
 
 android {
@@ -51,75 +51,32 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 
-    // Navigation XML Components
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
-
-    // Json Parser
-    implementation 'com.google.code.gson:gson:2.10.1'
-
-    // Shimmer
-    implementation 'com.facebook.shimmer:shimmer:0.5.0'
-
-
-    // GLIDE
-    implementation 'com.github.bumptech.glide:glide:4.15.0'
-    kapt 'com.github.bumptech.glide:compiler:4.14.2'
-    //circle image
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-    //lottie
-    def lottieVersion = "5.2.0"
-    implementation "com.airbnb.android:lottie:$lottieVersion"
-    //picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    //retrofit
+    // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // ok http interceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
+
+
+    // gson
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    // Room Database
+    def room_version = "2.4.3"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:2.5.0-alpha03"
 
     //Coroutines Dependencies
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
-    //ViewModel & livedata
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
-    //json converter
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
 
-
-    //Testing
-    // Dependencies for local unit tests
-    testImplementation "junit:junit:$junitVersion"
-
-    // AndroidX Test - Instrumented testing
-    androidTestImplementation "androidx.test.ext:junit:$androidXTestExtKotlinRunnerVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
-
-    // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation "androidx.fragment:fragment-ktx:$fragmentKtxVersion"
-
-    // hamcrest
-    testImplementation "org.hamcrest:hamcrest:2.2"
-    testImplementation "org.hamcrest:hamcrest-library:2.2"
-    androidTestImplementation "org.hamcrest:hamcrest:2.2"
-    androidTestImplementation "org.hamcrest:hamcrest-library:2.2"
-
-    // AndroidX and Robolectric
-    testImplementation "androidx.test.ext:junit:$androidXTestExtKotlinRunnerVersion"
-    testImplementation "androidx.test:core:$androidXTestCoreVersion"
-    testImplementation "org.robolectric:robolectric:4.8"
-
-    // InstantTaskExecutorRule
-    testImplementation "androidx.arch.core:core-testing:2.2.0"
-    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
-
-    //kotlinx-coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.15.0'
+    kapt 'com.github.bumptech.glide:compiler:4.15.0'
 
     //dimens
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
@@ -127,15 +84,82 @@ dependencies {
     //font dimens
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
 
-    //Material Design
-    implementation 'com.google.android.material:material:1.9.0'
 
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    def lifecycle_version = "2.6.0"
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    // ViewModel utilities for Compose
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version")
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
+    // Saved state module for ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.0")
+    implementation("androidx.lifecycle:lifecycle-common-java8:$lifecycle_version")
+    // Annotation processor
+    // kapt("androidx.lifecycle:lifecycle-compiler:$lifecycle_version")
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
+    // service
+    implementation("androidx.lifecycle:lifecycle-service:$lifecycle_version")
 
-    //shimmer
+    //Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
-    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
+
+    //Material Design
+    implementation 'com.google.android.material:material:1.8.0'
+
+    //Navigation
+    def nav_version = "2.5.3"
+    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+    // Testing Navigation
+    androidTestImplementation("androidx.navigation:navigation-testing:$nav_version")
+
+//    // gms
+//    implementation 'com.google.android.gms:play-services-location:21.0.1'
+//    // Google MAPS
+//    implementation 'com.google.maps.android:maps-compose:2.11.0'
+//    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+//    implementation 'com.google.maps.android:maps-compose-utils:2.11.0'
+//    implementation 'com.google.maps.android:maps-compose-widgets:2.10.0'
+//    implementation 'com.google.android.gms:play-services-location:21.0.1'
+//    implementation 'com.google.android.libraries.places:places:3.0.0'
+
+    //for Kotlin + workManager
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
+    def work_version = "2.8.1"
+    androidTestImplementation("androidx.work:work-testing:$work_version")
+
+    // lotti
+    def lottieVersion = "3.7.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
+//    // hilt
+//    implementation "com.google.dagger:hilt-android:2.44"
+//    kapt "com.google.dagger:hilt-android-compiler:2.44"
+//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+//    kapt "androidx.hilt:hilt-compiler:1.0.0"
+
+
+    def core_version = "1.6.0"
+    implementation("androidx.core:core-ktx:$core_version")
+
+    //testing
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation "com.google.truth:truth:1.0.1"
+    androidTestImplementation "com.google.truth:truth:1.0.1"
+
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+
+    testImplementation "org.robolectric:robolectric:4.8"
 
 }
