--- a/build.gradle
+++ b/build.gradle
@@ -1,49 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.8.10"
-    ext.nav_version = "2.3.3"
     repositories {
         google()
-        mavenCentral()
+        jcenter()
 
         maven { url "https://jitpack.io" }
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradlefiles
+//        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43'
+//        classpath 'com.google.gms:google-services:4.3.15'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
     }
 }
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
-}
+//    id 'com.google.dagger.hilt.android' version '2.43' apply false
+//    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
 
-// Define versions in a single place
-ext {
-    // App dependencies
-    kotlinVersion = '1.8.10'
-    androidXVersion = '1.0.0'
-    androidXTestCoreVersion = '1.3.0'
-    androidXTestExtKotlinRunnerVersion = '1.1.3'
-    androidXTestRulesVersion = '1.2.0'
-    androidXAnnotations = '1.3.0'
-    appCompatVersion = '1.4.0'
-    archLifecycleVersion = '2.4.0'
-    coroutinesVersion = '1.6.4'
-    cardVersion = '1.0.0'
-    espressoVersion = '3.4.0'
-    fragmentKtxVersion = '1.4.0'
-    junitVersion = '4.13.2'
-    materialVersion = '1.4.0'
-    recyclerViewVersion = '1.2.1'
-    roomVersion = '2.3.0'
-    rulesVersion = '1.0.1'
-    swipeRefreshLayoutVersion = '1.1.0'
-    timberVersion = '4.7.1'
 }
